--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,11 +1,21 @@
 geomesa{
     ppg {
         dbtype = "postgis-partitioned"
-        host = "192.168.1.232"
-        port = "35432"
+        host = "192.168.1.195"
+        port = "45432"
         schema = "public"
         database = "postgres"
-        user = "postgres"
+        user = "ivorysql"
+        passwd = "ds123456"
+    }
+
+    pg {
+        dbtype = "postgis"
+        host = "192.168.1.195"
+        port = "45432"
+        schema = "public"
+        database = "postgres"
+        user = "ivorysql"
         passwd = "ds123456"
     }
 
