--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,11 @@
             <artifactId>hbase-client</artifactId>
             <version>${hbase.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-geojson</artifactId>
+            <version>${gt.version}</version>
+        </dependency>
     </dependencies>
 
     <repositories>
